--- a/prompts/970131.md
+++ b/prompts/970131.md
@@ -1,6 +1,6 @@
 - Il rinvio è al 6 giugno 1997, è un problema? 
 - Sì, c'è un'altra udienza a Bologna.
-- Allora, Lentini Renato è presente. L'Avvocato Malfatto, del Foro di Perugia, è presente. La Russa Pietro, difeso dall'Avvocato Re di fiducia, che è presente, è assente. Patti Francesco è assente, difeso dagli Avvocati Grillo e Tirinnocchi, che sono presenti entrambi. Allora, Taibi Gerlando presente, è difeso dagli Avvocati Mirabile e Taibi; è presente l'Avvocato Mirabile. Mongiovì Angelo, presente e difeso dagli avvocati Grillo e Mongiovì; è presente l'Avvocato Grillo. C'è una richiesta da parte del Giornale di Sicilia di fare un servizio fotografico, quindi chiedo alle parti se siano d'accordo o meno...
+- Allora, Lentini Renato è presente. L'Avv. Malfatto, del Foro di Perugia, è presente. La Russa Pietro, difeso dall'Avv. Re di fiducia, che è presente, è assente. Patti Francesco è assente, difeso dagli Avv. Grillo e Tirinnocchi, che sono presenti entrambi. Allora, Taibi Gerlando presente, è difeso dagli Avv. Mirabile e Taibi; è presente l'Avv. Mirabile. Mongiovì Angelo, presente e difeso dagli Avv. Grillo e Mongiovì; è presente l'Avv. Grillo. C'è una richiesta da parte del Giornale di Sicilia di fare un servizio fotografico, quindi chiedo alle parti se siano d'accordo o meno...
 - Escluse le fotografie degli imputati
 - E dei difensori?
 - ...E dei difensori, se possibile.
