Revert "avvocato -> Avv."
This reverts commit 0154c8d8858403f247ad8ae01068f596a766d490.

--- a/prompts/970124.md
+++ b/prompts/970124.md
@@ -1,4 +1,4 @@
-- C'è il Dottor Taibi assistito dagli Avv. Taibi e Mirabile. Poi c'è Mongiovì Angelo, che è presente e difeso dagli Avv. Grillo e Mongiovì. 
+- C'è il Dottor Taibi assistito dagli avvocati Taibi e Mirabile. Poi c'è Mongiovì Angelo, che è presente e difeso dagli avvocati Grillo e Mongiovì. 
 - Presente. 
-- Poi è presente l'Avv. Nicola Grillo in sostituzione dell'Avv. Giuseppe Grillo.
+- Poi è presente l'avvocato Nicola Grillo in sostituzione dell'avvocato Giuseppe Grillo.
 - Esatto.
